@@ -580,7 +580,7 @@ public class HStoreFile implements HConstants {
         // Default for mapfiles is 128.  Makes random reads faster if we
         // have more keys indexed and we're not 'next'-ing around in the
         // mapfile.
-        setIndexInterval(conf.getInt("hbase.index.interval", 128));
+        setIndexInterval(conf.getInt("hbase.io.index.interval", 128));
       }
     }
   }
